--- a/src/scss/base/_quiz.scss
+++ b/src/scss/base/_quiz.scss
@@ -1,11 +1,9 @@
-
 .quiz{
 	background: $white;
 	max-width: 600px;
 	@include clearfix;
 	
-	.block{
-		
+	.block {
 		background: $white;
 		.block__text{
 			padding: 40px 20px 0;
@@ -13,7 +11,7 @@
 			text-align: left;
 		}
 
-		.quiz__sheet--title{
+		.quiz__sheet--title {
 			font-family: $base-font-family;
 			@include font-size(24);
 			color: $green;
@@ -21,7 +19,7 @@
 			padding: 19px;
 			font-weight: normal;
 		}
-		.quiz__sheet--subtitle{
+		.quiz__sheet--subtitle {
 			font-family: $heading-font-bold;
 			text-transform: uppercase;
 			@include font-size(18);
@@ -34,24 +32,26 @@
 				color: $green;
 			}
 		}
-		.main-quiz-vis{
+		.main-quiz-vis {
 			position:relative;
 			width: 92%;
 			margin: 0 auto;
 			display: block;
 			bottom: -10px;
 		}
-		p{
+		p {
 			padding: 20px;
 			@include font-size(13);
+			&:first-child{
+				padding-top: 40px;
+			}
+			&:last-child{
+				padding-bottom: 40px;
+			}	
 		}
-		p:first-child{
-			padding-top: 40px;
-		}
-		p:last-child{
-			padding-bottom: 40px;
-		}
-		button.pill-btn{
+		
+		
+		button.pill-btn {
 			display: block;
 			font-size: 10px;
 			border: 1px solid $white;
@@ -60,16 +60,15 @@
 					display:none;
 				}
 			}
-		}
-		button.pill-btn:hover {
-			background: $white;
-			border: 1px solid $dark-gray;
-			color:$dark-gray;
+			&:hover {
+				background: $white;
+				border: 1px solid $dark-gray;
+				color:$dark-gray;
+			}
 		}
 
-		button.quiz__nav--start{
+		button.quiz__nav--start {
 			margin: 2em auto;
-
 		}
 		button.quiz__nav--prev{
 			float: left;
@@ -81,7 +80,6 @@
 				padding: 0 4px 0 2px;
 				line-height: 1;
 				font-size: 1.4em;
-
 			}
 		}
 		button.quiz__nav--next{
@@ -90,29 +88,23 @@
 			span{
 				padding-left: 2px;
 			}
-
 			i{
 				padding: 0 2px 0 4px;
 				line-height: 1;
 				font-size: 1.4em;
-				
-				content:"";
 			}
-			
 		}
 	}
-	.block.quiz__nav{
-		//@include clearfix;
-	}
+	
 	.block.qtype1 {
 		padding: 20px;
 		a.q__item{
 			display: block;
 			color: $dark-blue;
 			position: relative;
-			
-			.q__item--overlay{
-				
+			margin-bottom: 20px;
+
+			.q__item--overlay{	
 				position: absolute;
 				width: 100%;
 				height: 100%;
@@ -133,11 +125,6 @@
 				background: $white;
 				z-index: 1;
 			}
-			img{
-				display: block;
-				margin:0;
-			}
-			margin-bottom: 20px;
 
 			@include media($desktop) {
 				@include span-columns(5); 
@@ -152,22 +139,23 @@
 				@include span-columns(4);
 				@include omega(1n);
 			}
-		}
-		a.q__item.active{
+
+			&:hover{
+				.q__item--overlay{
+					opacity: 0.3;
+				}
+				.q__item--text{
+					color: $orange;
+				}
+			}
+			&.active{
 			.q__item--overlay{
-				opacity: 0.7;
-			}
-			.q__item--text{
-				color: $orange;
-				font-family: $heading-font-bold !important;
-			}
-		}
-		a.q__item:hover{
-			.q__item--overlay{
-				opacity: 0.3;
-			}
-			.q__item--text{
-				color: $orange;
+					opacity: 0.7;
+				}
+				.q__item--text{
+					color: $orange;
+					font-family: $heading-font-bold !important;
+				}
 			}
 		}
 	}
@@ -184,7 +172,6 @@
 				span{
 					font-family: $heading-font-bold;
 				}
-				
 			}
 			margin-bottom: 10px;
 			background: $light-gray;
@@ -203,13 +190,14 @@
 				@include span-columns(4);
 				@include omega(1n);
 			}
-		}
-		a.q__item:hover{
-			background: $orange;
-			.q__item--text{
-				color: $white;
+
+			&:hover{
+				background: $orange;
+				.q__item--text{
+					color: $white;
+				}
 			}
-		}
+		}	
 	}
 	.block.mint{
 		background: $light-green;
